🚑 fix overflow-hidden

--- a/src/scss/components/_burger-menu.scss
+++ b/src/scss/components/_burger-menu.scss
@@ -1,13 +1,14 @@
-@use 'utils' as u;
+@use "utils" as u;
 
 .burger-menu {
-  transition: all .4s ease-in-out;
+  transition: all 0.4s ease-in-out;
   transform: translateX(-110vw);
   display: none;
   opacity: 0;
   position: absolute;
   min-width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
+  height: 200%;
   left: 0;
   top: 54px;
   background: u.$color-black;
